--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "express": "^5.1.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
-    "next": "^15.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "^14.2.33",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.6",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.2.5",
     "nodemon": "^3.1.10",
     "tailwindcss": "^4"
   }
